--- a/app/translations/bs.json
+++ b/app/translations/bs.json
@@ -1,3 +1,4 @@
 {
-  "containers.HomePage.header": "40 Nevevijevih hadisa"
+  "components.Hadith.details": "Detalji",
+  "containers.HomePage.header": "Četrdeset Nevevijevih hadisa"
 }
