--- a/app/translations/bs.json
+++ b/app/translations/bs.json
@@ -6,5 +6,5 @@
   "containers.HomePage.header": "Četrdeset Nevevijevih hadisa",
   "containers.HadithDetails.bismillah": "U ime Allaha, Milostivog, Samilosnog.",
   "containers.HadithDetails.comment": "Komentar:",
-  "containers.Search.placeholder": "Pretraži"
+  "containers.Search.placeholder": "Pretraži..."
 }
