--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -6,5 +6,5 @@
   "containers.HomePage.header": "Al-Nawawi's Forty Hadith",
   "containers.HadithDetails.bismillah": "In the name of Allah, the Most Gracious, the Most Merciful.",
   "containers.HadithDetails.comment": "Comment:",
-  "containers.Search.placeholder": "Search"
+  "containers.Search.placeholder": "Search..."
 }
